Information retrieval example

--- a/slides/04-information-retrieval.ipynb
+++ b/slides/04-information-retrieval.ipynb
@@ -634,6 +634,24 @@
   },
   {
    "cell_type": "markdown",
+   "id": "absolute-resistance",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Evaluating search engines\n",
+    "\n",
+    "## Effectiveness metrics\n",
+    "\n",
+    "- Recall and precision\n",
+    "\n",
+    "![](images/information_retrieval/precision_and_recall.png)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "dental-abraham",
    "metadata": {
     "slideshow": {
@@ -648,6 +666,50 @@
     "then, average precision for a ranking is\n",
     "$$AP = \\frac{\\sum_{k \\in \\text{relevant}} P@k}{\\text{number of relevant docs}}$$\n",
     "Then **MAP** is the average across all queries."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "black-lawsuit",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Evaluation\n",
+    "\n",
+    "![](images/information_retrieval/multiple_queries_precision.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "surprising-bottle",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Evaluation\n",
+    "\n",
+    "![](images/information_retrieval/precision_recall_curves.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "comparable-transfer",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Evaluation\n",
+    "\n",
+    "- We usually interpolate precision assuming that it decays with higher recalls. i.e., $$P(R) = \\max \\{P' : R' \\geq R \\land (R', P') \\in S \\}$$\n",
+    "\n",
+    "![](images/information_retrieval/normalized_p_and_r.png)"
    ]
   },
   {
